1、初步实现模拟系统任务时钟窗口 2、实现时钟窗口获取输入焦点时使用系统主题服务绘制背景高亮[主要使用DrawThemeBackground函数(需要使用透明背景即HBITMAP需要有透明通道，需要指定主题类型（需要确认使用哪一类背景绘制）)] 3、由于时钟窗口自绘，需要拷贝父窗口背景，使用DrawThemeParentBackground（需要使用透明背景即HBITMAP需要有透明通道）
Signed-off-by: Unique <1054457048@qq.com>

--- a/Shell/ITrayClock/ITrayClock.vcproj
+++ b/Shell/ITrayClock/ITrayClock.vcproj
@@ -317,6 +317,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\libMain.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Menu.cpp"
 				>
 			</File>
@@ -338,6 +342,18 @@
 			</File>
 			<File
 				RelativePath=".\TrayClock.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\UILabel.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\UIManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\WinImplBase.cpp"
 				>
 			</File>
 		</Filter>
@@ -363,11 +379,27 @@
 				>
 			</File>
 			<File
+				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
 				RelativePath=".\StdAfx.h"
 				>
 			</File>
 			<File
 				RelativePath=".\TrayClock.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UILabel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UIManager.h"
+				>
+			</File>
+			<File
+				RelativePath=".\WinImplBase.h"
 				>
 			</File>
 		</Filter>
@@ -376,6 +408,10 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\ITrayClock.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
