--- a/Shell/ITrayClock/ITrayClock.vcproj
+++ b/Shell/ITrayClock/ITrayClock.vcproj
@@ -341,6 +341,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\ThemeHelper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\TrayClock.cpp"
 				>
 			</File>
@@ -384,6 +388,10 @@
 			</File>
 			<File
 				RelativePath=".\StdAfx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ThemeHelper.h"
 				>
 			</File>
 			<File
