--- a/Demo/MzfFileMon/MzfFileMon.vcproj
+++ b/Demo/MzfFileMon/MzfFileMon.vcproj
@@ -40,6 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)Demo\MzfFileMon&quot;;&quot;$(SolutionDir)Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -232,6 +233,10 @@
 			<Filter
 				Name="Wnd"
 				>
+				<File
+					RelativePath=".\Wnd\AddPathFileItem.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -298,6 +303,10 @@
 			<Filter
 				Name="Wnd"
 				>
+				<File
+					RelativePath=".\Wnd\AddPathFileItem.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
