1、修改Lua适应工程 2、PCHunter演示工程，增加进程查看功能，目前不完整 3、修复PCHunter工程硬件变化通知工具，在进程退出时，导致应用崩溃问题 4、使用新方式格式化显示网卡启用时间 5、修改公用库中获取进程句柄方式 6、修复DuiList模版中释放动态库分配内存，在主程序中释放内存导致进程崩溃问题 7、公用库新增获取文件信息，获取系统目录等功能 8、新增使用千分位格式化输出数字功能 9、修复界面库Picture控件释放图标句柄问题
Signed-off-by: Unique <1054457048@qq.com>

--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -257,7 +257,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\stdafx.cpp"
+				RelativePath=".\StdAfx.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -491,7 +491,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\stdafx.h"
+				RelativePath=".\StdAfx.h"
 				>
 			</File>
 			<File
