--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -495,6 +495,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\UserDefine.h"
+				>
+			</File>
+			<File
 				RelativePath=".\WndLib.h"
 				>
 			</File>
