1、TTimeHelper增加MiniSkin空白窗口，用于更新窗口置顶，或者取消置顶功能 2、增加桌面插件辅助类 3、增加插件窗口基类，后续根据需要继续在完善 4、DwmHelper添加设置窗口其他属性函数 5、其他细节调整
Signed-off-by: Unique <1054457048@qq.com>

--- a/Demo/InjectDll/InjectDll.vcproj
+++ b/Demo/InjectDll/InjectDll.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)Library&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)Library&quot;;&quot;$(SolutionDir)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -114,7 +114,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)Library&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)Library&quot;;&quot;$(SolutionDir)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
