--- a/MainApp/FindWindow/FindWindow.rc
+++ b/MainApp/FindWindow/FindWindow.rc
@@ -80,14 +80,14 @@ IDI_ICON_WHEN_MOUSEUP   ICON                    "res\\MouseUp.ico"
 //
 
 IDD_FINDWINDOW_DIALOG DIALOGEX 0, 0, 320, 200
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "原形毕露 By Unique"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     GROUPBOX        "窗口查找程序工具",IDC_STATIC,7,7,306,40
     LTEXT           "  将""查找程序工具""拖至窗口，待选择的\n窗口边框发生改变后释放鼠标。",IDC_STATIC,18,22,125,19
-    ICON            IDI_ICON_WHEN_MOUSEUP,IDC_STATIC_RELEASE_PIC,211,21,18,18,SS_NOTIFY
+    ICON            IDI_ICON_WHEN_MOUSEUP,IDC_STATIC_RELEASE_PIC,211,21,20,20,SS_NOTIFY
     LTEXT           "查找程序工具",IDC_STATIC,162,27,42,8
     GROUPBOX        "选定的对象",IDC_STATIC,7,53,306,100
     LTEXT           "窗口",IDC_STATIC,29,70,15,8
