1、使用Duilib界面库重写CopyFile工具，位于Tools文件夹 2、TTimeHelper时间工具 天气提示框使用TOPMOST属性 3、核心库增加获取内存所在模块句柄函数 4、界面库xml解析类增加重新初始化功能
Signed-off-by: Unique <1054457048@qq.com>

--- a/Demo/PCHunter/PCHunter.vcproj
+++ b/Demo/PCHunter/PCHunter.vcproj
@@ -376,6 +376,14 @@
 					Name="System"
 					>
 					<File
+						RelativePath=".\VirtualWnd\System\LocalUser.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\VirtualWnd\System\SystemInfo.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\VirtualWnd\System\SystemMgr.cpp"
 						>
 					</File>
@@ -605,6 +613,14 @@
 				<Filter
 					Name="System"
 					>
+					<File
+						RelativePath=".\VirtualWnd\System\LocalUser.h"
+						>
+					</File>
+					<File
+						RelativePath=".\VirtualWnd\System\SystemInfo.h"
+						>
+					</File>
 					<File
 						RelativePath=".\VirtualWnd\System\SystemMgr.h"
 						>
