1、新增项目工程打包文件拷贝工具（仅针对生成文件和资源文件，需要预生成拷贝文件列表） 2、更新DynamicPackTool打包工具，目前不能使用（代码编辑器功能未实现）

--- a/Tools/DynamicPackTool/DynamicPackTool.vcproj
+++ b/Tools/DynamicPackTool/DynamicPackTool.vcproj
@@ -187,20 +187,16 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ScintillaWnd.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Solution.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\stdafx.cpp"
+				RelativePath=".\StdAfx.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"
-					/>
-				</FileConfiguration>
 			</File>
 			<Filter
 				Name="helper"
@@ -211,6 +207,18 @@
 				</File>
 				<File
 					RelativePath=".\helper\UmPath.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Utils"
+				>
+				<File
+					RelativePath=".\Utils\UIWnd.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Utils\Wnd.cpp"
 					>
 				</File>
 			</Filter>
@@ -233,7 +241,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath=".\Resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ScintillaWnd.h"
 				>
 			</File>
 			<File
@@ -241,7 +253,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\stdafx.h"
+				RelativePath=".\StdAfx.h"
 				>
 			</File>
 			<Filter
@@ -253,6 +265,18 @@
 				</File>
 				<File
 					RelativePath=".\helper\UmPath.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Utils"
+				>
+				<File
+					RelativePath=".\Utils\UIWnd.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Utils\Wnd.h"
 					>
 				</File>
 			</Filter>
