1、更新TTimeHelper项目，延迟5s用于支持开机时能注入桌面进程

--- a/Demo/TTimeHelper/TTimeHelper.vcproj
+++ b/Demo/TTimeHelper/TTimeHelper.vcproj
@@ -271,6 +271,14 @@
 			<File
 				RelativePath=".\StdAfx.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\TTimeHelper.cpp"
