1、WinMTR应用新增TabCtrl控件，目前状态为开发中，后续可以测试 2、更新RichEditDemo演示控件，移除编译错误信息

--- a/Demo/WinMTR/WinMTR.vcproj
+++ b/Demo/WinMTR/WinMTR.vcproj
@@ -233,6 +233,14 @@
 					RelativePath=".\Utils\UIFileList.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\Utils\UIMuiltLayout.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Utils\UITabOption.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -297,6 +305,14 @@
 				</File>
 				<File
 					RelativePath=".\Utils\UIFileList.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Utils\UIMuiltLayout.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Utils\UITabOption.h"
 					>
 				</File>
 			</Filter>
