--- a/Demo/TTimeHelper/TTimeHelper.vcproj
+++ b/Demo/TTimeHelper/TTimeHelper.vcproj
@@ -279,6 +279,14 @@
 						UsePrecompiledHeader="1"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\TTimeHelper.cpp"
